Bug 11193 - Typo in XF86Keysym.h?
Summary: Typo in XF86Keysym.h?
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Protocol/Core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: xorg-7.4
  Show dependency treegraph
 
Reported: 2007-06-07 09:38 UTC by Bastien Nocera
Modified: 2008-04-22 00:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Bastien Nocera 2007-06-07 09:38:38 UTC
In XF86Keysym.h, there's the confusing:
#define XF86XK_AudioRewind      0x1008FF3E
#define XF86XK_XF86BackForward  0x1008FF3F

Shouldn't the one at the bottom be:
XF86XK_AudioForward
?

There's no AudioForward in the whole of the header, and I don't think there's any other keys that would match the expected behaviour. Adding a #define for it in the header might be the best option.
Comment 1 James Cloos 2008-03-06 08:40:08 UTC
Heh.  Good catch.

Clearly the #define cannot be XF86XK_XF86BackForward.

There is an XF86BackForward entry in XKeysymDef, also defined to 0x1008FF3F, so the header should have s/XF86XK_XF86BackForward/XF86XK_BackForward/, since that is what was intended at the time (2002/11/26) when that was first committed.

Presumably it was meant for a key that either did AudioBack when unshifted and AudioForward when shifted or visa-versa.  Else, it may come from tape players which can play both sides w/o flipping the cassette.

The cvs log says:

  522. Added support for special keys found on many ACPI control, Easy Access                   
       Keyboards, Internet keyboards, laptops, notebooks and PDA (via                           
       xkb/symbols/inet). Added new key symbols for these keyboards                             
       (Stanislav Brabec).

so Stanislav would be the definitive source for what was meant.

I pushed the s/// above to trunk with commit 07e83988ec0b1c9577646daca3943badd5dcc0d1, since the #define is useless as is and an obvious thinko.  I haven’t cherry-picked it back to the 1.4 or 1.5 branches, but it probably should be.

I think XF86AudioPrev and XF86AudioNext should be used for keyboards which have separate keys for those two functions.
Comment 2 James Cloos 2008-03-06 09:34:37 UTC
Gah.  Clearly I was a bit sleepy when writing that last comment....

Ignore the nonsense about cherry picking (obviously I had xserver on the brain :) and replace it with:

I didn’t push out a new release with this (and it *just* missed 7.0.12), but it would not be a bad idea to get it into the next kalamari.

Comment 3 Daniel Stone 2008-03-06 10:16:21 UTC
'katamari'. :)
Comment 4 James Cloos 2008-03-06 22:49:26 UTC
Grrr.

Both a thinko and a typo in a discussion of pushing a fix for something which was either a typo or a thinko.

Such irony.

Clearly my Earl Grey¹ wasn’t up to the task of competing against my eye fatigue. :-/

1] Alas, no, not bin 42....
Comment 5 Peter Hutterer 2008-04-22 00:35:22 UTC
commit 07e83988ec0b1c9577646daca3943badd5dcc0d1
Author: James Cloos <cloos@jhcloos.com>
Date:   Thu Mar 6 11:34:17 2008 -0500

    Fix typo in XF86Keysym.h
    
    Fix typo reported in https://bugs.freedesktop.org/show_bug.cgi?id=11193
    thereby making XF86Keysym.h match libX11’s XKeysymDB.



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.