Fix typo in XF86Keysym.h

Fix typo reported in https://bugs.freedesktop.org/show_bug.cgi?id=11193
thereby making XF86Keysym.h match libX11’s XKeysymDB.