XF86keysym.h
@@ -100,7 +100,7 @@
 #define XF86XK_Finance		0x1008FF3C   /* Display financial site      */
 #define XF86XK_Community	0x1008FF3D   /* Display user's community    */
 #define XF86XK_AudioRewind	0x1008FF3E   /* "rewind" audio track        */
-#define XF86XK_XF86BackForward	0x1008FF3F   /* ??? */
+#define XF86XK_BackForward	0x1008FF3F   /* ??? */
 #define XF86XK_Launch0		0x1008FF40   /* Launch Application          */
 #define XF86XK_Launch1		0x1008FF41   /* Launch Application          */
 #define XF86XK_Launch2		0x1008FF42   /* Launch Application          */
